Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-30841

Signal QMenu::hovered(QAction) does not work on OSX

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.1.0
    • 5.0.0, 5.0.2
    • Widgets: Main Window
    • None
    • Osx cocoa
    • macOS
    • 12e84748aae0d5b85a502ca2646b6bb57b2f4363

    Description

      QMenu::hovered signal does not work with Qt5 with mac native style menu bar.

      Attached example reproduces it.

      Steps:
      Run the example
      click on File and hover mouse on open

      Observe slot for QMenu::hovered(QAction*) is not called.

      This works good with Windows but problem is in OSX

      Attachments

        For Gerrit Dashboard: QTBUG-30841
        # Subject Branch Project Status CR V

        Activity

          People

            andysh Andy Shaw
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes